deployments/namespace_socialbiz-chatbot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: socialbiz-gitbook-chatbot
