deployments/service_socialbiz-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: socialbiz-be-service
  namespace: socialbiz-gitbook-chatbot
spec:
  type: NodePort
  selector:
    app: socialbiz-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialbiz-be
  namespace: socialbiz-gitbook-chatbot
  labels:
    app: socialbiz-be
spec:
  replicas: 3
  selector:
    matchLabels:
      app: socialbiz-be
  template:
    metadata:
      labels:
        app: socialbiz-be
    spec:
      containers:
        - name: socialbiz-be-container
          image: 494056189061.dkr.ecr.ap-northeast-2.amazonaws.com/socialbiz-be:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8989
          volumeMounts:
            - name: config-volume
              mountPath: /app/.env
              subPath: .env
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: config-volume
          configMap:
            name: be-secret
            items:
              - key: .env
                path: .env
