deployments/service_socialbiz-chroma.yaml
apiVersion: v1
kind: Service
metadata:
  name: socialbiz-chromadb-service
  namespace: socialbiz-gitbook-chatbot
spec:
  type: ClusterIP
  selector:
    app: socialbiz-chromadb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialbiz-chromadb
  namespace: socialbiz-gitbook-chatbot
  labels:
    app: socialbiz-chromadb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: socialbiz-chromadb
  template:
    metadata:
      labels:
        app: socialbiz-chromadb
    spec:
      containers:
        - name: socialbiz-chromadb-container
          image: 494056189061.dkr.ecr.ap-northeast-2.amazonaws.com/socialbiz-chromadb:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
